--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/tododb?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = akshaymehta
+#spring.datasource.url = jdbc:mysql://localhost:3306/tododb?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = akshaymehta
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.hibernate.ddl-auto = update
 
-server.servlet.context-path=/springboot-todo-app
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.jpa.hibernate.ddl-auto = update
+
+server.servlet.context-path=/gtd-todo
